welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:8: error: value update is not a member of Boolean
	if (estSurBiscuit() = true) {
            ^RunHalf:11: error: value update is not a member of Boolean
	if (estSurOrange() = true ){
            ^